# NotesApp-CS

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
